k8s/internal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-internal-service
  #namespace: mongodb-app
spec:
  selector:
    app: petclinic
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
